# quranize.github.io

./: .gitignore  Cargo.toml  LICENSE  README.md  index.html  manifest.json  pwabuilder-sw.js  service-worker.js
.github/workflows/: build-and-deploy.yml  ci.yml  deploy.yml  pages.yml  test.yml
asset/: quranize.js
icons/mipmap-anydpi-v26/: quranize.xml
pkg/: quranize_bg.wasm
scripts/: app.js  quranize.js  quranize_bg.wasm
scripts/quran/: sura-names.js
src/: encode_result.rs  lib.rs  location.rs
styles/: index.css
web-app/: index.html  service-worker.js
web-app-assets/: app.webmanifest  index.webmanifest  pwabuilder-sw-register.js  pwaupdate.js
web-app/assets/: app.webmanifest
web-app/scripts/: app.js  event-status.js  quranize-worker.js  worker.js
web-app/scripts/quran/: en.sahih.js  id.indonesian.js  meta.js
web-app/styles/: app.css  app.scss  index.css
web-app/styles/pre-compiled/: app.scss  index.css
